@@ -18,6 +18,8 @@ Summary of important user-visible changes for statistics 1.4.3:
  
  ** evalclusters       (patch #10052)
  
+ ** expfit             (patch #10092)
+ 
  ** gscatter           (patch #10043)
 
  ** inconsistent       (patch #10008)
